tests/rosetta/out/C/bitmap-histogram.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:53Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
list_list_int image() {
  list_int tmp2 = list_int_create(3);
  tmp2.data[0] = 0;
  tmp2.data[1] = 0;
  tmp2.data[2] = 10000;
  list_int tmp3 = list_int_create(3);
  tmp3.data[0] = 65535;
  tmp3.data[1] = 65535;
  tmp3.data[2] = 65535;
  list_int tmp4 = list_int_create(3);
  tmp4.data[0] = 65535;
  tmp4.data[1] = 65535;
  tmp4.data[2] = 65535;
  list_int tmp1_data[] = {{3, tmp2}, {3, tmp3}, {3, tmp4}};
  list_list_int tmp1 = {3, tmp1_data};
  return tmp1;
}

list_int histogram(list_list_int g, int bins) {
  if (bins <= 0) {
    bins = g.data[0].len;
  }
  list_int h = list_int_create(0);
  int i = 0;
  while (i < bins) {
    h = 0;
    i = i + 1;
  }
  int y = 0;
  while (y < g.len) {
    list_int row = g.data[y];
    int x = 0;
    while (x < row.len) {
      int p = row.data[x];
      int idx = (int)(((p * (bins - 1)) / 65535));
      h.data[idx] = h.data[idx] + 1;
      x = x + 1;
    }
    y = y + 1;
  }
  return h;
}

int medianThreshold(list_int h) {
  int lb = 0;
  int ub = h.len - 1;
  int lSum = 0;
  int uSum = 0;
  while (lb <= ub) {
    if (lSum + h.data[lb] < uSum + h.data[ub]) {
      lSum = lSum + h.data[lb];
      lb = lb + 1;
    } else {
      uSum = uSum + h.data[ub];
      ub = ub - 1;
    }
  }
  return (int)(((ub * 65535) / h.len));
}

list_list_int threshold(list_list_int g, int t) {
  list_list_int tmp5 = {0, NULL};
  list_list_int out = tmp5;
  int y = 0;
  while (y < g.len) {
    list_int row = g.data[y];
    list_int newRow = list_int_create(0);
    int x = 0;
    while (x < row.len) {
      if (row.data[x] < t) {
        newRow = 0;
      } else {
        int tmp6_data[1];
        list_int tmp6 = {1, tmp6_data};
        tmp6.data[0] = 65535;
        list_int tmp7 = concat_list_int(newRow, tmp6);
        newRow = tmp7;
      }
      x = x + 1;
    }
    list_list_int tmp8 = list_list_int_create(1);
    tmp8.data[0] = newRow;
    list_list_int tmp9 = concat_list_list_int(out, tmp8);
    out = tmp9;
    y = y + 1;
  }
  return out;
}

int printImage(list_list_int g) {
  int y = 0;
  while (y < g.len) {
    list_int row = g.data[y];
    const char *line = "";
    int x = 0;
    while (x < row.len) {
      if (row.data[x] == 0) {
        char *tmp10 = concat_string(line, "0");
        line = tmp10;
      } else {
        char *tmp11 = concat_string(line, "1");
        line = tmp11;
      }
      x = x + 1;
    }
    printf("%s\n", line);
    y = y + 1;
  }
}

int main() {
  list_list_int img = image();
  list_int h = histogram(img, 0);
  char *tmp12 = _str(h);
  char *tmp13 = concat_string("Histogram: ", tmp12);
  printf("%s\n", tmp13);
  int t = medianThreshold(h);
  char *tmp14 = _str(t);
  char *tmp15 = concat_string("Threshold: ", tmp14);
  printf("%s\n", tmp15);
  list_list_int bw = threshold(img, t);
  printImage(bw);
}

int main() {
  main();
  return 0;
}
